<resources>
    <string name="app_name">osuti movil</string>
    <string name="ingresar">Ingresar</string>
    <string name="newuser">Nuevo Usuario</string>
    <string name="ingnomape">Ingrese Nombre y Apellido</string>
    <string name="ingnumeroafi">Ingrese numero de afiliado</string>
    <string name="email">Ingrese E-mail</string>
    <string name="pass">Contraseña</string>
    <string name="repass">Re-ingrese contraseña</string>
    <string name="REGISTRAR">REGISTRAR USUARIO</string>
    <string name="nombreMedico">Nombre</string>
    <string name="Especialidad">Especialidad</string>
    <string name="direccion">Direcciòn</string>
    <string name="horarios">Horarios de ateciòn</string>
    <string name="telefono">Telefono</string>
    <string name="Turnonuevo">Nuevo Turno</string>
    <string name="Modifturno">Modificar Turno</string>
    <string name="ELiminarturno">Eliminar Turno</string>
    <string name="title_activity_menu_user">menuUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="array">sdf</string>

    <string-array name="especialidad">
        <item>Pediatra</item>
        <item>Odontologia</item>
        <item>Cardiologia</item>
        <item>Clinico</item>
    </string-array>

</resources>
