<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altauser">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medio"
        android:layout_marginLeft="@dimen/etiqueta">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nomape"
            android:text="@string/ingnomape"
            android:textColor="@color/colorOsu2"
            android:textSize="@dimen/etiqueta" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNombreyApellido"

            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvnumerafil"
                android:text="@string/ingnumeroafi"
                android:textColor="@color/colorOsu2"
                android:textSize="@dimen/etiqueta"
                />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etnroafiliado"
            android:inputType="number"
            android:maxLength="5"
            android:hint="20000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvemail"
            android:text="@string/email"
            android:textColor="@color/colorOsu2"
            android:textSize="@dimen/etiqueta" />
        <EditText
            android:id="@+id/etmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="example@correo.com"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvpass"
            android:text="@string/pass"
            android:textColor="@color/colorOsu2"
            android:textSize="@dimen/etiqueta" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etpass"
            android:inputType="textPassword"
            android:hint="**********"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvrepetpass"
            android:text="@string/repass"
            android:textColor="@color/colorOsu2"
            android:textSize="@dimen/etiqueta" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etrepass"
            android:inputType="textPassword"
            android:hint="**********"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegistrar"
            android:text="@string/REGISTRAR"
            android:layout_marginLeft="@dimen/medioposta"
            android:layout_marginTop="@dimen/medio"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>