<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/etiqueta"
            android:layout_marginTop="@dimen/medio"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEspecialidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Especialidad" />

            <Spinner
                android:id="@+id/spinnerEspecialidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medioposta"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/etiqueta"
                android:text="@string/nombreMedico" />

            <TextView
                android:id="@+id/tvdireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/etiqueta"
                android:text="@string/direccion" />

            <TextView
                android:id="@+id/tvhorarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/etiqueta"
                android:text="@string/horarios" />

            <TextView
                android:id="@+id/tvtelefonomedic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/etiqueta"
                android:text="@string/telefono" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/grande"
            >

            <TextView
                android:id="@+id/textViewNM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textViewDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textViewHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
