<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".abmTurno">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titulo"
            android:textColor="@color/colorOsu2"
            android:layout_marginTop="@dimen/medioposta"
            android:layout_marginLeft="@dimen/medioposta"
            android:text="Espacio de turnos"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="@dimen/texto_EditText"
          >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Turnonuevo"
            android:id="@+id/btnTurnonuevo"
            android:layout_marginTop="@dimen/etiqueta"/>
          <Button
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Modifturno"
              android:id="@+id/btnTurnoMofif"
              android:layout_marginTop="@dimen/etiqueta"/>
          <Button
              android:id="@+id/btnTurnoeliminar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ELiminarturno"
              android:layout_marginTop="@dimen/etiqueta"/>
      </LinearLayout>
    </LinearLayout>
</ScrollView>