<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginuser">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medioposta"
        android:layout_marginLeft="@dimen/medioposta"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etiqueta"
            android:text="@string/ingnumeroafi"
            android:textSize="@dimen/etiqueta"
            android:textColor="@color/colorOsu1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etuser"
            android:inputType="number"
            android:hint="20000"
            android:maxLength="5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/etiqueta"
            android:textSize="@dimen/etiqueta"
            android:textColor="@color/colorOsu1"
            android:text="@string/pass"
            />

        <EditText
            android:id="@+id/editTextPassuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ingresar"
            android:layout_marginTop="@dimen/medio"
            android:id="@+id/btningresaruser"
            />

    </LinearLayout>


</RelativeLayout>